--- a/2_1_훈련_데이터와_테스트_데이터.ipynb
+++ b/2_1_훈련_데이터와_테스트_데이터.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -8,6 +9,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -23,6 +25,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "LQEfg_XBHbS9"
@@ -32,6 +35,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "bpILzjwGw-K8"
@@ -59,10 +63,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "for과 zip 함수를 이용하여 데이터 합치기"
+        "for과 zip 함수를 이용하여 데이터 합치기\n",
+        "\n",
+        "행을 샘플로, 열을 특성으로 데이터를 구성한다.(사이킷런을 이용하기 위함)"
       ]
     },
     {
@@ -91,6 +98,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -140,6 +148,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "x0VENF0EyOgb"
@@ -149,6 +158,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "bGMY6wsZw6rP"
@@ -162,6 +172,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "IOyftJmqHbTB"
@@ -171,6 +182,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "qqToN_cQywGj"
@@ -191,6 +203,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "FfXXT0z3zBYF"
@@ -331,6 +344,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "7wo-9-Ix0WTl"
@@ -435,6 +449,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "20j-CJLs1U_q"
@@ -444,6 +459,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "pphep3SEHbTD"
@@ -453,6 +469,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "qgIZVmLm12on"
