--- a/8_3_합성곱_신경망의_시각화.ipynb
+++ b/8_3_합성곱_신경망의_시각화.ipynb
@@ -357,6 +357,14 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "keras.Model을 사용하여 앞서 만든 model의 input으로 받아 ouput을 뱉는 conv_acti모델을 생성."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 87,
       "metadata": {},
@@ -645,6 +653,14 @@
       "metadata": {},
       "source": [
         "![image.png](attachment:image.png)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "허블과 비셀의 일차 시각피질 연구"
       ]
     }
   ],
