--- a/8_2_합성곱_신경망을_사용한_이미지_분류.ipynb
+++ b/8_2_합성곱_신경망을_사용한_이미지_분류.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "pS9ZuQWfCeHe"
       },
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "wubmkM6q5QcB"
       },
@@ -122,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -171,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -195,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -229,7 +229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -249,9 +249,9 @@
             "\n",
             "WARNING:tensorflow:From c:\\Users\\kjsid\\anaconda3\\Lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
             "\n",
-            "1500/1500 [==============================] - 23s 14ms/step - loss: 0.5073 - accuracy: 0.8184 - val_loss: 0.3150 - val_accuracy: 0.8831\n",
+            "1500/1500 [==============================] - 24s 14ms/step - loss: 0.5073 - accuracy: 0.8184 - val_loss: 0.3150 - val_accuracy: 0.8831\n",
             "Epoch 2/20\n",
-            "  11/1500 [..............................] - ETA: 18s - loss: 0.3237 - accuracy: 0.8892"
+            "   5/1500 [..............................] - ETA: 20s - loss: 0.3266 - accuracy: 0.8875"
           ]
         },
         {
@@ -266,17 +266,17 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "1500/1500 [==============================] - 20s 13ms/step - loss: 0.3348 - accuracy: 0.8797 - val_loss: 0.2719 - val_accuracy: 0.8966\n",
+            "1500/1500 [==============================] - 21s 14ms/step - loss: 0.3348 - accuracy: 0.8797 - val_loss: 0.2719 - val_accuracy: 0.8966\n",
             "Epoch 3/20\n",
-            "1500/1500 [==============================] - 21s 14ms/step - loss: 0.2893 - accuracy: 0.8953 - val_loss: 0.2460 - val_accuracy: 0.9084\n",
+            "1500/1500 [==============================] - 22s 15ms/step - loss: 0.2893 - accuracy: 0.8953 - val_loss: 0.2460 - val_accuracy: 0.9084\n",
             "Epoch 4/20\n",
-            "1500/1500 [==============================] - 23s 15ms/step - loss: 0.2552 - accuracy: 0.9070 - val_loss: 0.2344 - val_accuracy: 0.9113\n",
+            "1500/1500 [==============================] - 22s 14ms/step - loss: 0.2552 - accuracy: 0.9070 - val_loss: 0.2344 - val_accuracy: 0.9113\n",
             "Epoch 5/20\n",
-            "1500/1500 [==============================] - 21s 14ms/step - loss: 0.2340 - accuracy: 0.9137 - val_loss: 0.2296 - val_accuracy: 0.9153\n",
+            "1500/1500 [==============================] - 22s 15ms/step - loss: 0.2340 - accuracy: 0.9137 - val_loss: 0.2296 - val_accuracy: 0.9153\n",
             "Epoch 6/20\n",
-            "1500/1500 [==============================] - 22s 15ms/step - loss: 0.2137 - accuracy: 0.9213 - val_loss: 0.2139 - val_accuracy: 0.9218\n",
+            "1500/1500 [==============================] - 23s 15ms/step - loss: 0.2137 - accuracy: 0.9213 - val_loss: 0.2139 - val_accuracy: 0.9218\n",
             "Epoch 7/20\n",
-            "1500/1500 [==============================] - 23s 15ms/step - loss: 0.1947 - accuracy: 0.9266 - val_loss: 0.2163 - val_accuracy: 0.9209\n",
+            "1500/1500 [==============================] - 22s 15ms/step - loss: 0.1947 - accuracy: 0.9266 - val_loss: 0.2163 - val_accuracy: 0.9209\n",
             "Epoch 8/20\n",
             "1500/1500 [==============================] - 22s 14ms/step - loss: 0.1792 - accuracy: 0.9330 - val_loss: 0.2294 - val_accuracy: 0.9212\n"
           ]
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "id": "Q9ZA46lb5QcE"
       },
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -341,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -363,7 +363,7 @@
               "[0.21391214430332184, 0.921750009059906]"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -374,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -402,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -413,19 +413,12 @@
       },
       "outputs": [
         {
-          "ename": "",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31mCanceled future for execute_request message before replies were done"
-          ]
-        },
-        {
-          "ename": "",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m현재 셀 또는 이전 셀에서 코드를 실행하는 동안 Kernel이 충돌했습니다. 셀의 코드를 검토하여 오류의 가능한 원인을 식별하세요. 자세한 내용을 보려면 <a href='https://aka.ms/vscodeJupyterKernelCrash'> 여기 </a> 를 클릭하세요. 자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1/1 [==============================] - 0s 129ms/step\n",
+            "[[5.1845145e-14 8.6782131e-24 1.6993232e-18 4.6930247e-16 2.2524703e-14\n",
+            "  7.5286775e-14 5.5437432e-14 4.2666807e-15 1.0000000e+00 1.2522437e-16]]\n"
           ]
         }
       ],
@@ -436,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -466,7 +459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {
         "id": "917fZGHu5QcG"
       },
@@ -478,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -503,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {
         "id": "G2ihSV-l5QcH"
       },
@@ -514,7 +507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -536,7 +529,7 @@
               "[0.2385566383600235, 0.9146999716758728]"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
