--- a/8_1_합성곱_신경망의_구조.ipynb
+++ b/8_1_합성곱_신경망의_구조.ipynb
@@ -15,6 +15,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 합성곱 신경망(Convolutional Neural Networks, CNNs)\n",
+    "\n",
+    "- 1989년 얀 르쿤(Yann LeCun) 교수의 논문에서 발표  \n",
+    "\n",
+    "- 이미지 인식, 음성 인식 등에 자주 사용되는데, 특히, 이미지 인식 분야에서 거의 모든 딥러닝 기술에 사용  \n",
+    "\n",
+    "- 완전 연결 계층과는 달리 이미지 픽셀 사이의 관계를 고려하여 공간 정보를 가진 채로 특징 추출 가능  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
